favicon icon and alignment issues fixed.

--- a/static/assets/scss/layout/_roadmap.scss
+++ b/static/assets/scss/layout/_roadmap.scss
@@ -8,8 +8,6 @@
 }
 .roadmap {
     &__wrapper {
-        max-width: 800px;
-        margin: 0 auto;
         position: relative;
         & .tg-swiper-next,
         & .tg-swiper-prev {
